--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,11 @@
 [build]
   command = "npm run build"
-  functions = "netlify/functions"
   publish = "dist"
 
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
 [build.environment]
-  NODE_VERSION = "20"
+  NODE_VERSION = "18"
